--- a/client/src/components/Timeline/style.css
+++ b/client/src/components/Timeline/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Lato');
-* {
+/* * {
     box-sizing: border-box;
-}
+} */
 
 body {
     background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
