--- a/client/src/components/SearchForm/search.css
+++ b/client/src/components/SearchForm/search.css
@@ -16,12 +16,19 @@ body {
     min-height: 100vh;
 }
 
-header {
+.search-body {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-bottom: 32px;
 }
+
+/* header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 32px;
+} */
 
 h1 {
     color: #888;
@@ -39,13 +46,14 @@ h1 {
     overflow: hidden;
     width: 100%;
     max-width: 480px;
-    margin-bottom: 16px;
+    margin-bottom: 32px;
     transition: 0.4s;
 }
 
 .search-box input {
     display: block;
     appearance: none;
+    align-items: center;
     outline: none;
     border: none;
     padding: 16px;
